<resources>
    <string name="app_name">TS eChallan</string>
    <string name="app_version">3.1.4</string>
    <string name="network_error">Please check your internet connection and try again !</string>
    <string name="click_back_again_to_close">Please click on back again to close the app !</string>
    <string name="ts_eticket_login">TS-eTicket Login</string>
    <string name="login_id">Login ID</string>
    <string name="password">Password</string>
    <string name="my_pid">23001004</string>
    <string name="my_password">HiT951753</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="register">Register</string>
    <string name="new_register">New Register</string>
    <string name="telangana_state_police">TELANGANA STATE POLICE</string>
    <string name="employee_id">Employee ID</string>
    <string name="user_id">User ID</string>
    <string name="user_registration">User Registration</string>
    <string name="officer_name">Officer Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email_id">Email ID</string>
    <string name="select_rank">Select Rank</string>
    <string name="select_role">Select Role</string>
    <string name="district">District</string>
    <string name="district_unit">District / Unit Name</string>
    <string name="cadre_rank">Cadre / Rank</string>
    <string name="police_station">Police Station</string>
    <string name="police_station_name">Police Station Name</string>
    <string name="ps_name">PS Name</string>
    <string name="role">Role</string>
    <string name="rank">Rank</string>
    <string name="officer_rank">Officer Rank</string>
    <string name="already_have_an_account">Already have an Account ?,</string>
    <string name="login">LOGIN</string>
    <string name="granted">GRANTED</string>
    <string name="denied">DENIED</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="spot_challan">Spot Challan</string>
    <string name="drunk_drive"><![CDATA[Drunk & Drive]]></string>
    <string name="_41_cp_act">41 (CP) Act.</string>
    <string name="ghmc">GHMC</string>
    <string name="_39_b_act">39 (B) Act.</string>
    <string name="court_disposal">Court Disposal</string>
    <string name="release_documents">Release Documents</string>
    <string name="reports">Reports</string>
    <string name="settings">Settings</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="surname">Sur Name</string>
    <string name="contact_no">Contact No.</string>
    <string name="employee_pao_no">Employee PAO No.</string>
    <string name="user_name_pid">User Name / PID</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">DEVELOPER</string>
    <string name="nav_header_subtitle">echallanhelpdesk.hyd@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="vehicle_regn_no">Vehicle Registration No.</string>
    <string name="vehicle_no">Vehicle No.</string>
    <string name="licence_no">Licence No.</string>
    <string name="driving_licence_no">Driving Licence No.</string>
    <string name="driver_dob">Driver DOB</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="colon">:</string>
    <string name="star">*</string>
    <string name="empty_value">-</string>
    <string name="regn_no">Regn No.</string>
    <string name="t_r_no">T/R No.</string>
    <string name="engine_no">Engine No.</string>
    <string name="chassis_no">Chassis No.</string>
    <string name="aadhaar_no">Aadhaar No.</string>
    <string name="get_details">GET DETAILS</string>
    <string name="vehicle_details">Vehicle Details</string>
    <string name="dummy_vehicle_no">TS08EG9748</string>
    <string name="dummy_eticket_no">HYD00TE194823263</string>
    <string name="owner_name">Owner Name</string>
    <string name="address">Address</string>
    <string name="regd_no">Regd. No.</string>
    <string name="regd_number">Regd. Number</string>
    <string name="regd_owner">Regd. Owner</string>
    <string name="maker_s_class">Maker\'s Class</string>
    <string name="vehicle_class">Vehicle Class</string>
    <string name="vehicle_details_not_found">Vehicle details not found !</string>
    <string name="licence_details">Licence Details</string>
    <string name="licence_details_not_found">Licence details not found !</string>
    <string name="driver_s_licence_details">Driver\'s Licence Details</string>
    <string name="vehicle_rta_details">Vehicle RTA Details</string>
    <string name="dummy_licence_no">7461WGL1998OD</string>
    <string name="driver_s_name">Driver\'s Name</string>
    <string name="driver_s_father_name">Driver\'s Father Name</string>
    <string name="age">Age</string>
    <string name="pending_challans">Pending Challans</string>
    <string name="no_pending_challans">No Pending Challans !</string>
    <string name="pending_amount">Pending Amount (\u20B9)</string>
    <string name="dummy_amount">2070.00</string>
    <string name="driver_information">Driver\'s Information</string>
    <string name="dummy_name">VINAY KUMAR NAGARJUNA</string>
    <string name="dummy_address">H.NO: 5–4–21/1, RP. ROAD, NALGONDA, TS-508001, INDIA.</string>
    <string name="dummy_makers_class">FORD FIESTA</string>
    <string name="dummy_vehicle_class">MOTOA CAR</string>
    <string name="dummy_chassis_no">UBWU45CWB451BUWBCC</string>
    <string name="dummy_engine_no">JD45IQ4577QIDDQC</string>
    <string name="dummy_f_name">N. YADAIAH CHARY</string>
    <string name="total_penalty_points">TOTAL PENALTY POINTS: 33</string>
    <string name="issued_on">Issued On: 16/03/2018</string>
    <string name="pending_challans_and_amount">Pending Challans &amp; Amount</string>
    <string name="next">Next</string>
    <string name="cancel">Cancel</string>
    <string name="allow">Allow</string>
    <string name="dummy_pend_challans">05</string>
    <string name="point_name">Point Name</string>
    <string name="responsible_police_station">Responsible Police Station</string>
    <string name="responsible_ps_name">Responsible PS Name</string>
    <string name="save">Save</string>
    <string name="indian_rupee">\u20B9</string>
    <string name="dummy_dob">11-Sep-1992</string>
    <string name="dummy_age">Age: 26 yrs</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="is_it_spot_payment">Is it Spot payment ?</string>
    <string name="detained_items">Detained Items</string>
    <string name="vehicle">Vehicle</string>
    <string name="rc">RC</string>
    <string name="licence">Licence</string>
    <string name="permit">Permit</string>
    <string name="none">None</string>
    <string name="send_otp">Send OTP</string>
    <string name="back">Back</string>
    <string name="submit">Submit</string>
    <string name="confirm">Confirm</string>
    <string name="do_you_want_logout_the_application">Do you want to logout the Application ?</string>
    <string name="ok">OK</string>
    <string name="neutral">Neutral</string>
    <string name="traffic_cell">TRAFFIC CELL</string>
    <string name="wheeler_code">Wheeler Code</string>
    <string name="welcome">Welcome</string>
    <string name="encroachment_information">Encroachment Information</string>
    <string name="driver_image">Driver Image</string>
    <string name="please_wait">Please wait…</string>
    <string name="please_wait_logging">Please wait…,\nLogging</string>
    <string name="empty_response">Empty response, Try again</string>
    <string name="something_went_wrong">Something went wrong !</string>
    <string name="try_again">Try again !</string>
    <string name="error">Error !</string>
    <string name="close">Close</string>
    <string name="select_item">Select Item</string>
    <string name="pid_required">PID required</string>
    <string name="password_required">Password required</string>
    <string name="password_length_should_be_4_digits">Password length should be min 4 digits</string>
    <string name="first_name_is_required">First Name Required</string>
    <string name="last_name_is_required">Last Name Required</string>
    <string name="email_id_is_required">Email ID Required</string>
    <string name="contact_no_is_required">Contact No Required</string>
    <string name="emp_id_is_required">Employee ID Required</string>
    <string name="employee_pao_no_is_required">Employee PAO No Required</string>
    <string name="enter_valid_mobile_no">Enter Valid Mobile No</string>
    <string name="select_unit_name">Select Unit Name</string>
    <string name="select_ps_name">Select PS Name</string>
    <string name="select_point_name">Select Point Name</string>
    <string name="select_resp_ps_name">Select Responsible PS Name</string>
    <string name="select_cadre_name">Select Cadre Name</string>
    <string name="select_wheeler_code">Select Wheeler Code</string>
    <string name="select_wheeler_type">Select wheeler type</string>
    <string name="select_violations">Select Violations</string>
    <string name="selected_violations">Selected Violations</string>
    <string name="please_select_violations">Please select violations</string>
    <string name="please_enter_vehicle_no">Please enter vehicle number</string>
    <string name="please_enter_valid_licence_no">Please enter valid licence number</string>
    <string name="please_select_dob_of_dl">Please select DOB of DL</string>
    <string name="driver_name_is_required">Driver name is required</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="insurance_validity">Insurance Validity</string>
    <string name="gender">Gender</string>
    <string name="wheeler">Wheeler</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="permissions_granted">Permissions Granted</string>
    <string name="enter_vehicle_no">Enter Vehicle No</string>
    <string name="enter_tr_no">Enter T/R No</string>
    <string name="enter_engine_no">Enter Engine No</string>
    <string name="enter_chassis_no">Enter Chassis No</string>
    <string name="enter_licence_no">Enter Licence No</string>
    <string name="select_dob_of_dl">Select DOB of DL</string>
    <string name="select_dob">Select Date of Birth</string>
    <string name="enter_driver_name">Enter Name</string>
    <string name="enter_driver_father_name">Enter Father Name</string>
    <string name="enter_driver_age">Enter Age</string>
    <string name="dd_mmm_yyyy">DD-MMM-YYYY</string>
    <string name="_2">2</string>
    <string name="enter_email_id">Enter Email ID</string>
    <string name="enter_contact_no">Enter Contact No.</string>
    <string name="enter_employee_id">Enter Employee ID</string>
    <string name="enter_pao_no">Enter PAO No.</string>
    <string name="bac_serial_no">BAC Serial No.</string>
    <string name="enter_bac_serial_no">Enter BAC Serial No.</string>
    <string name="bac_reading">BAC Reading</string>
    <string name="enter_bac_reading">Enter BAC Reading</string>
    <string name="integrated_e_challan_system">Integrated Traffic e-Challan System</string>
    <string name="designed_and_developed_by_winc">Designed and Developed by WinC</string>
    <string name="before">Before</string>
    <string name="after">After</string>
    <string name="shop_information">Shop Information</string>
    <string name="tin_no">TIN No.</string>
    <string name="select_all">Select All</string>
    <string name="no_items_to_display">No Items to Display</string>
    <string name="search">Search</string>
    <string name="search_violations_here">Search violations here</string>
</resources>