<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorBG">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_dialog_forgot_pass"
        style="@style/large_text_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password" />

    <ImageView
        android:id="@+id/img_forgot_pass_close_btn"
        android:layout_width="@dimen/close_img_width"
        android:layout_height="@dimen/close_img_height"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="false"
        android:layout_margin="@dimen/close_img_margin"
        android:contentDescription="@null"
        android:src="@drawable/ic_close_2x" />

    <LinearLayout
        android:id="@+id/lyt_forget_password_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_dialog_forgot_pass"
        android:orientation="vertical"
        android:padding="@dimen/activity_padding">

        <android.support.v7.widget.AppCompatTextView
            android:textColor="@color/colorTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_name_pid" />

        <android.support.v7.widget.AppCompatEditText
            style="@style/edit_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tv_margin_top"
            android:hint="@string/user_name_pid" />

        <android.support.v7.widget.AppCompatTextView
            android:textColor="@color/colorTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/et_margin_top"
            android:text="@string/contact_no" />

        <android.support.v7.widget.AppCompatEditText
            style="@style/edit_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tv_margin_top"
            android:hint="@string/enter_contact_no" />

        <android.support.v7.widget.AppCompatTextView
            android:textColor="@color/colorTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/et_margin_top"
            android:text="@string/email_id" />

        <android.support.v7.widget.AppCompatEditText
            style="@style/edit_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tv_margin_top"
            android:layout_marginBottom="@dimen/et_margin_bottom"
            android:hint="@string/enter_email_id" />

    </LinearLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lyt_forget_password_content"
        android:background="@color/colorAccent"
        android:text="@string/submit"
        android:textStyle="bold"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Button"
        android:textColor="@color/colorWhite" />

</RelativeLayout>