<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorBG">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/multi_select_dialog_AppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/toolbar_spot"
            layout="@layout/toolbar_app" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/multi_select_dialog_AppBar"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/violations_dialog_title"
            style="@style/large_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_violations"
            android:visibility="gone"/>

        <android.support.v7.widget.SearchView
            android:id="@+id/violations_search_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:iconifiedByDefault="true"
            android:padding="0dp"
            app:defaultQueryHint="@string/search_violations_here"
            android:queryHint="@string/search" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/et_margin_top"
            android:orientation="horizontal"
            android:visibility="gone">

            <android.support.v7.widget.AppCompatCheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextView" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/et_margin"
                android:layout_marginLeft="@dimen/et_margin"
                android:text="@string/select_all"
                android:textColor="@color/colorTextView" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <view
                android:id="@+id/violations_recycler_view"
                class="com.tspolice.echallan.violationselection.ViolationsCustomRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_no_items_to_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/no_items_to_display"
                android:textSize="14sp" />

        </FrameLayout>

        <LinearLayout
            android:id="@+id/lnr_lyt_btns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_margin"
            android:orientation="horizontal"
            android:weightSum="1">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_violations_dialog_cancel"
                style="@style/button_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.49"
                android:text="@string/cancel" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.02" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_violations_dialog_done"
                style="@style/button_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.49"
                android:text="@string/next" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>